Packaging tests
Signed-off-by: Tomas Langer <tomas.langer@oracle.com>