@@ -55,10 +55,8 @@ cd ${WS_DIR}/tests/integration/native-image/mp-1
 # Classpath
 java -jar target/helidon-tests-native-image-mp-1.jar
 
-# TODO 3.0.0-JAKARTA - remove "add-opens"
 # Module Path
 java --module-path target/helidon-tests-native-image-mp-1.jar:target/libs \
-  --add-opens=org.eclipse.parsson.media/org.eclipse.parsson.media=weld.core.impl,org.glassfish.hk2.utilities \
   --module helidon.tests.nimage.mp/io.helidon.tests.integration.nativeimage.mp1.Mp1Main
 
 #
@@ -69,9 +67,7 @@ cd ${WS_DIR}/tests/integration/native-image/mp-3
 java -Dexit.on.started=! -jar target/helidon-tests-native-image-mp-3.jar
 
 # Module Path
-# TODO 3.0.0-JAKARTA - remove "add-opens"
 java -Dexit.on.started=! \
   --module-path target/helidon-tests-native-image-mp-3.jar:target/libs \
-  --add-opens=org.eclipse.parsson.media/org.eclipse.parsson.media=weld.core.impl,org.glassfish.hk2.utilities \
   --add-modules helidon.tests.nimage.quickstartmp \
   --module io.helidon.microprofile.cdi/io.helidon.microprofile.cdi.Main
